--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "7z-bin",
-  "version": "19.0.0-r5",
+  "version": "21.0.7",
   "description": "7zip binaries",
   "main": "index.js",
   "author": "",
